# zundaarrow-tts

./: .gitignore  .gitmodules  .npmrc  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: build.yml  pages.yml
installer/: Cargo.toml
installer/src/: log.rs  main.rs
landing/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
landing/public/: version.json
landing/src/: App.vue  main.ts  style.css  vite-env.d.ts
landing/src/assets/: zundamon
src/: App.vue  consts.ts  env.d.ts  index.html  invoke.ts  main.ts  router.ts  styles.css
src-tauri/: Cargo.toml  Tauri.toml  build.rs  tauri.conf.json  tauri.conf.json5  tauri.conf.prod.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  lib.rs  main.rs  server.rs
src/components/: AlertDialog.vue  DialogDisplay.vue  MainToolbar.vue  SelectInput.vue
src/stores/: dialog.ts  server.ts
src/styles/: element.scss
src/views/: LaunchingView.vue  MainView.vue
tools/: build.ts  setVersion.ts
zundamon-speech-setup/: Rakefile
zundamon-speech/server/: main.py
zundamon_speech/server/: main.py  requirements.txt  weight.json
zundamon_speech_setup/: Rakefile
