[package]
name = "installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
figlet-rs = "0.1.5"
indicatif = "0.17.11"
octocrab = "0.43.0"
reqwest = "0.12.12"
rfd = { version = "0.15.2", default-features = false, features = ["gtk3"] }
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.1", features = ["derive"] }
tempfile = "3.18.0"
tokio = { version = "1.44.0", features = ["full"] }
